Kubernetes: основы, применение и администрирование /Сетевое взаимодействие в K8S. Часть 2/file/service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: multitool
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
