Kubernetes: основы, применение и администрирование /Сетевое взаимодействие в K8S. Часть 2/file/service_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: nginx
  ports:
    - name: front
      protocol: TCP
      port: 80
      targetPort: 80
