Kubernetes: основы, применение и администрирование /Сетевое взаимодействие в K8S. Часть 2/file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: netology.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: back-service
                port:
                  number: 80
